--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <string name="login_hint_username">帐号：</string>
+    <string name="login_hint_password">密码：</string>
+    <string name="login_login">登录</string>
+    <string name="login_register">注册</string>
+    
 </resources>
